--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -6,9 +6,6 @@ services:
     networks:
       - db-network
       - redis-network
-    env_file:
-      - path: .env
-        required: false
     command: sleep infinity
     environment:
       DATABASE_URL: postgresql://postgres:mysecretpassword@db:5432/postgres
@@ -23,16 +20,15 @@ services:
     image: postgres:17
     volumes:
       - db-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-mysecretpassword}
     networks:
       - db-network
+    restart: unless-stopped
     healthcheck:
-      test: ['CMD', 'pg_isready', '-U', 'postgres', '-t', '10']
-      interval: 10s
+      test: ["CMD", "pg_isready", "-U", "postgres", "-t", "10"]
+      interval: 1s
       timeout: 10s
-      start_interval: 1s
-      start_period: 1s
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-mysecretpassword}
   redis:
     image: redis:8
     networks:
