--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,4 +1,9 @@
 services:
+  web-predeploy:
+    environment:
+      TEST_AUTH: true
+      BETTER_AUTH_SECRET: dev-secret
+      BETTER_AUTH_URL: http://localhost:5260
   db-studio:
     ports:
       - 5261:4983
