--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,35 @@
 services:
   db:
     image: postgres:17
-    restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
     networks:
       - db-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres", "-t", "10"]
+      interval: 1s
+      timeout: 10s
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-mysecretpassword}
-    healthcheck:
-      test: ['CMD', 'pg_isready', '-U', 'postgres', '-t', '10']
-      interval: 10s
-      timeout: 10s
-      start_interval: 1s
-      start_period: 1s
-  db-studio:
-    image: ghcr.io/drizzle-team/gateway:latest
-    restart: always
-    volumes:
-      - drizzle-gateway:/app
+  web-predeploy:
+    build:
+      context: .
+      dockerfile: ./apps/web/Dockerfile
+    command:
+      [
+        "sh",
+        "-c",
+        "bun run --cwd /infra/db /infra/db/migrate.js && bun run /infra/auth/generate-test-users.js",
+      ]
     networks:
       - db-network
-    environment:
-      - STORE_PATH=/app
-    env_file:
-      - path: .env
-        required: false
     depends_on:
       db:
         condition: service_healthy
+    restart: "no"
+    environment:
+      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:mysecretpassword@db:5432/postgres}
   redis:
     image: redis:8
     networks:
@@ -37,19 +38,28 @@ services:
     build:
       context: .
       dockerfile: ./apps/web/Dockerfile
-    restart: always
     networks:
       - db-network
-      - redis-network
-    environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:mysecretpassword@db:5432/postgres}
-      REDIS_URL: redis://redis:6379
-    env_file:
-      - path: .env
-        required: false
     depends_on:
       db:
         condition: service_healthy
+      web-predeploy:
+        condition: service_completed_successfully
+    restart: unless-stopped
+    environment:
+      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:mysecretpassword@db:5432/postgres}
+  db-studio:
+    image: ghcr.io/drizzle-team/gateway:latest
+    volumes:
+      - drizzle-gateway:/app
+    networks:
+      - db-network
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: unless-stopped
+    environment:
+      - STORE_PATH=/app
 
 networks:
   db-network:
