--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,3 @@
 FROM mcr.microsoft.com/devcontainers/javascript-node:24-bookworm
 
-ENV TURBO_TELEMETRY_DISABLED=1
-RUN npm install -g bun
-RUN npm install -g turbo
-RUN npm install -g reactlith
+RUN npm install -g bun@1.3.3
