--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "v*.*.*"
+
+env:
+  REGISTRY: ${{ vars.REGISTRY || 'docker.io' }}
 
 jobs:
   run-check:
@@ -11,47 +16,41 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     needs: run-check
-    if: ${{ success() && vars.REGISTRY != '' && vars.REGISTRY_USERNAME != '' }}
+    if: ${{ success() && vars.REGISTRY_USERNAME != '' }}
 
     strategy:
       matrix:
         image:
           - name: web
-            dockerfile: './apps/web/Dockerfile'
+            dockerfile: "./apps/web/Dockerfile"
 
     steps:
+      - name: Set image name
+        run: echo "IMAGE_NAME=${{ env.REGISTRY }}/${{ vars.REGISTRY_USERNAME }}/wishbeam-${{ matrix.image.name }}" >> $GITHUB_ENV
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.IMAGE_NAME }}
+
       - name: Login to Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ vars.REGISTRY }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ vars.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push image ${{ matrix.image.name }}
+      - name: Build and push image "${{ matrix.image.name }}"
         uses: docker/build-push-action@v6
         with:
           file: ${{ matrix.image.dockerfile }}
           push: true
-          tags: |
-            ${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:latest
-            ${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:${{ github.sha }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           build-args: ${{ matrix.image.build-args }}
-          secrets: |
-            TURBO_TEAM=${{ vars.TURBO_TEAM }}
-            TURBO_TOKEN=${{ secrets.TURBO_TOKEN }}
-          cache-from: type=registry,ref=${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:latest
+          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:main
           cache-to: type=inline
-
-  trigger-deployment:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: ${{ success() }}
-
-    steps:
-      - name: Trigger deployment
-        run: |
-          curl -X 'GET' \
-          '${{ secrets.DEPLOYMENT_WEBHOOK }}' \
