--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,6 @@
 **/*.gen.ts
-**/*.handlebars
-**/assets
-**/android
-**/ios
-**/pnpm-lock.yaml
 **/drizzle
+**/generated
+**/dist
+**/.output
+**/.nitro
