--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
+  "style": "base-nova",
   "rsc": false,
   "tsx": true,
   "tailwind": {
@@ -10,6 +10,7 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "~/components",
     "utils": "~/lib/utils",
@@ -17,8 +18,10 @@
     "lib": "~/lib",
     "hooks": "~/hooks"
   },
-  "iconLibrary": "lucide",
+  "menuColor": "default",
+  "menuAccent": "subtle",
   "registries": {
+    "@coss": "https://coss.com/ui/r/{name}.json",
     "@tailark": "https://tailark.com/r/{name}.json"
   }
 }
