--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,47 +3,31 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "vite build",
-    "clean": "bun exec \"rm -rf node_modules dist .tanstack .nitro .output .turbo\"",
-    "component": "bunx shadcn@latest add",
-    "postcomponent": "bun run format",
-    "dev": "bunx --bun vite",
-    "format": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --write",
-    "format:check": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --check",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "start": "bun exec \"NODE_ENV=production bun run .output/server/index.mjs\"",
-    "start-cluster": "bun exec \"NODE_ENV=production bun run ./src/cluster.ts\"",
-    "typecheck": "tsc --noEmit"
+    "build": "bunx --bun vite build",
+    "component": "bunx --bun shadcn@latest add",
+    "dev": "bunx --bun vite dev",
+    "start": "bun exec \"NODE_ENV=production bun run dist/server/index.mjs\""
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@tanstack/react-form": "catalog:",
-    "@tanstack/react-query": "catalog:trpc",
-    "@trpc/client": "catalog:trpc",
-    "@trpc/tanstack-react-query": "catalog:trpc",
+    "@base-ui/react": "1.0.0",
     "@wishbeam/auth": "workspace:*",
     "@wishbeam/intl": "workspace:*",
     "@wishbeam/trpc": "workspace:*",
-    "@wishbeam/utils": "workspace:*",
-    "babel-plugin-react-compiler": "catalog:react",
+    "@tailwindcss/vite": "catalog:tailwind",
+    "@tanstack/react-query": "catalog:trpc",
+    "@tanstack/react-router": "catalog:vite",
+    "@tanstack/react-router-ssr-query": "catalog:vite",
+    "@tanstack/react-start": "catalog:vite",
+    "@tanstack/router-plugin": "catalog:vite",
+    "@trpc/client": "catalog:trpc",
+    "@trpc/tanstack-react-query": "catalog:trpc",
+    "@vitejs/plugin-react": "catalog:vite",
+    "babel-plugin-react-compiler": "latest",
     "better-auth": "catalog:",
     "class-variance-authority": "catalog:tailwind",
     "clsx": "catalog:tailwind",
     "lucide-react": "catalog:",
-    "motion": "^12.23.22",
+    "nitro": "catalog:vite",
     "react": "catalog:react",
     "react-dom": "catalog:react",
     "superjson": "catalog:",
@@ -51,22 +35,18 @@
     "tailwindcss": "catalog:tailwind",
     "tw-animate-css": "catalog:tailwind",
     "use-intl": "catalog:",
-    "zod": "catalog:"
+    "vite": "catalog:vite",
+    "vite-tsconfig-paths": "catalog:vite",
+    "zod": "catalog:",
+    "@wishbeam/utils": "workspace:*",
+    "motion": "^12.23.22",
+    "@tanstack/react-form": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "catalog:tailwind",
-    "@tanstack/react-router": "catalog:vite",
-    "@tanstack/react-router-ssr-query": "catalog:vite",
-    "@tanstack/react-start": "catalog:vite",
-    "@tanstack/router-plugin": "catalog:vite",
+    "@wishbeam/typescript-config": "workspace:*",
     "@types/bun": "catalog:",
     "@types/react": "catalog:react",
     "@types/react-dom": "catalog:react",
-    "@vitejs/plugin-react": "catalog:vite",
-    "@wishbeam/eslint-config": "workspace:*",
-    "@wishbeam/typescript-config": "workspace:*",
-    "typescript": "catalog:",
-    "vite": "catalog:vite",
-    "vite-tsconfig-paths": "catalog:vite"
+    "typescript": "catalog:"
   }
 }
