--- a/package.json
+++ b/package.json
@@ -4,83 +4,76 @@
   "workspaces": {
     "packages": [
       "apps/*",
-      "packages/*",
-      "tools/*"
+      "packages/*"
     ],
     "catalog": {
-      "@t3-oss/env-core": "^0.13.8",
-      "@tanstack/react-form": "^1.23.4",
-      "@types/bun": "1.3.1",
-      "better-auth": "^1.3.18",
-      "lucide-react": "0.544.0",
-      "superjson": "^2.2.2",
-      "typescript": "5.9.2",
-      "use-intl": "^4.3.9",
-      "uuid": "^13.0.0",
-      "zod": "4.1.9"
+      "@t3-oss/env-core": "~0.13.8",
+      "@tanstack/react-form": "~1.23.4",
+      "@types/bun": "1.3.3",
+      "better-auth": "~1.4.3",
+      "lucide-react": "0.555.0",
+      "superjson": "~2.2.6",
+      "typescript": "5.9.3",
+      "use-intl": "~4.5.6",
+      "uuid": "~13.0.0",
+      "zod": "4.1.13"
     },
     "catalogs": {
       "drizzle": {
-        "@types/pg": "^8.15.5",
-        "drizzle-kit": "1.0.0-beta.1-c0277c0",
-        "drizzle-orm": "1.0.0-beta.1-c0277c0",
-        "pg": "^8.16.3"
+        "drizzle-kit": "1.0.0-beta.6-7aaf14b",
+        "drizzle-orm": "1.0.0-beta.6-7aaf14b"
       },
       "react": {
-        "@types/react": "^19.2.0",
-        "@types/react-dom": "^19.2.0",
-        "react": "^19.2.0",
-        "react-dom": "^19.2.0",
-        "babel-plugin-react-compiler": "^1.0.0"
+        "@types/react": "~19.2.7",
+        "@types/react-dom": "~19.2.0",
+        "react": "~19.2.3",
+        "react-dom": "~19.2.3",
+        "babel-plugin-react-compiler": "~1.0.0"
       },
       "tailwind": {
-        "@tailwindcss/vite": "^4.1.13",
+        "@tailwindcss/vite": "~4.1.13",
         "class-variance-authority": "0.7.1",
-        "clsx": "^2.1.1",
-        "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.13",
-        "tw-animate-css": "^1.4.0"
+        "clsx": "~2.1.1",
+        "tailwind-merge": "~3.4.0",
+        "tailwindcss": "~4.1.13",
+        "tw-animate-css": "~1.4.0"
       },
       "trpc": {
-        "@tanstack/react-query": "^5.90.2",
-        "@trpc/client": "^11.6.0",
-        "@trpc/server": "^11.6.0",
-        "@trpc/tanstack-react-query": "^11.6.0"
+        "@tanstack/react-query": "~5.90.16",
+        "@trpc/client": "~11.8.1",
+        "@trpc/server": "~11.8.1",
+        "@trpc/tanstack-react-query": "~11.8.1"
       },
       "vite": {
-        "@tanstack/react-router": "~1.131.50",
-        "@tanstack/react-router-ssr-query": "~1.131.50",
-        "@tanstack/react-start": "~1.131.50",
-        "@tanstack/router-plugin": "~1.131.50",
-        "@vitejs/plugin-react": "^5.0.4",
-        "vite": "^7.1.7",
-        "vite-tsconfig-paths": "^5.1.4"
+        "@tanstack/react-router": "~1.144.0",
+        "@tanstack/react-router-ssr-query": "~1.144.0",
+        "@tanstack/react-start": "~1.145.3",
+        "@tanstack/router-plugin": "~1.145.2",
+        "@vitejs/plugin-react": "~5.1.2",
+        "vite": "~7.2.7",
+        "vite-tsconfig-paths": "~5.1.4",
+        "nitro": "3.0.1-alpha.1"
       }
     }
   },
   "scripts": {
-    "build": "turbo build build-scripts",
-    "check": "turbo format:check lint typecheck",
-    "clean": "turbo clean clean:root",
-    "clean:root": "bun exec \"rm -rf node_modules .turbo\"",
+    "build": "bun run --filter '*' build",
+    "clean": "git clean -xdfq 'node_modules/*' '**/node_modules/*' '**/dist/*'",
+    "format": "oxfmt",
+    "format:check": "oxfmt --check",
+    "lint": "oxlint --type-aware --type-check",
+    "lint:fix": "oxlint --fix-suggestions --type-aware --type-check",
+    "check": "oxlint --type-aware --type-check && oxfmt --check",
+    "fix": "oxlint --fix-suggestions --type-aware --type-check && oxfmt",
     "compose": "docker compose -f docker-compose.yaml -f docker-compose.dev.yaml up --build -d",
-    "deps": "bun update --interactive --recursive",
-    "fix": "turbo format lint:fix typecheck",
-    "format": "turbo format format:root",
-    "format:check": "turbo format:check format:root:check",
-    "format:root": "prettier . \"!./apps/**\" \"!./packages/**\" \"!./tools/**\" --write",
-    "format:root:check": "prettier . \"!./apps/**\" \"!./packages/**\" \"!./tools/**\" --check",
-    "lint": "turbo lint",
-    "lint:fix": "turbo lint:fix",
-    "start": "turbo start",
-    "typecheck": "turbo typecheck"
+    "deps": "bun update --interactive --recursive"
   },
-  "prettier": "@wishbeam/prettier-config",
   "devDependencies": {
-    "@wishbeam/prettier-config": "workspace:*",
-    "turbo": "^2.5.8"
+    "oxfmt": "^0.21.0",
+    "oxlint": "^1.36.0",
+    "oxlint-tsgolint": "^0.10.0"
   },
-  "packageManager": "bun@1.3.1",
+  "packageManager": "bun@1.3.3",
   "patchedDependencies": {
     "nitropack@2.12.6": "patches/nitropack@2.12.6.patch"
   }
