--- a/packages/empty/package.json
+++ b/packages/empty/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wishbeam/pubsub",
+  "name": "@wishbeam/empty",
   "private": true,
   "type": "module",
   "imports": {
@@ -8,14 +8,11 @@
   "exports": {
     ".": "./src/index.ts"
   },
-  "scripts": { },
-  "dependencies": {
-    "@wishbeam/env": "workspace:*",
-    "zod": "catalog:"
-  },
+  "scripts": {},
+  "dependencies": {},
   "devDependencies": {
-    "@types/bun": "catalog:",
     "@wishbeam/typescript-config": "workspace:*",
+    "@types/bun": "catalog:",
     "typescript": "catalog:"
   }
 }
