--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -8,32 +8,19 @@
   "exports": {
     ".": "./src/index.ts"
   },
-  "scripts": {
-    "clean": "bun exec \"rm -rf node_modules .turbo\"",
-    "format": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --write",
-    "format:check": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --check",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "typecheck": "tsc --noEmit"
-  },
-  "prettier": "@wishbeam/prettier-config",
+  "scripts": {},
   "dependencies": {
-    "@trpc/server": "catalog:trpc",
     "@wishbeam/auth": "workspace:*",
     "@wishbeam/db": "workspace:*",
     "@wishbeam/env": "workspace:*",
-    "@wishbeam/pubsub": "workspace:*",
-    "@wishbeam/utils": "workspace:*",
-    "base-x": "^5.0.1",
+    "@trpc/server": "catalog:trpc",
     "drizzle-orm": "catalog:drizzle",
     "superjson": "catalog:",
-    "uuid": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@types/bun": "catalog:",
-    "@wishbeam/eslint-config": "workspace:*",
     "@wishbeam/typescript-config": "workspace:*",
+    "@types/bun": "catalog:",
     "typescript": "catalog:"
   }
 }
