--- a/packages/typescript-config/tsconfig.json
+++ b/packages/typescript-config/tsconfig.json
@@ -1,22 +1,22 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "include": [],
   "compilerOptions": {
     // Base Options:
     "esModuleInterop": true,
     "skipLibCheck": true,
     "target": "ESNext",
-    "allowJs": true,
     "resolveJsonModule": true,
     "moduleDetection": "force",
     "isolatedModules": true,
 
     // Strictness
     "strict": true,
+    "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
     "noFallthroughCasesInSwitch": true,
     "noPropertyAccessFromIndexSignature": false,
-    "checkJs": true,
 
     "module": "ESNext",
     "noEmit": true,
