--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-mysecretpassword}
   redis:
     image: redis:8
+    restart: unless-stopped
     networks:
       - redis-network
 
