--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,11 @@ services:
       timeout: 10s
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-mysecretpassword}
+  redis:
+    image: redis:8
+    networks:
+      - redis-network
+    restart: unless-stopped
   web-predeploy:
     build:
       context: .
@@ -30,16 +35,14 @@ services:
     restart: "no"
     environment:
       DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:mysecretpassword@db:5432/postgres}
-  redis:
-    image: redis:8
-    networks:
-      - redis-network
+      REDIS_URL: redis://redis:6379
   web:
     build:
       context: .
       dockerfile: ./apps/web/Dockerfile
     networks:
       - db-network
+      - redis-network
     depends_on:
       db:
         condition: service_healthy
@@ -48,6 +51,7 @@ services:
     restart: unless-stopped
     environment:
       DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:mysecretpassword@db:5432/postgres}
+      REDIS_URL: redis://redis:6379
   db-studio:
     image: ghcr.io/drizzle-team/gateway:latest
     volumes:
