--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -14,6 +14,7 @@
     "@wishbeam/auth": "workspace:*",
     "@wishbeam/db": "workspace:*",
     "@wishbeam/env": "workspace:*",
+    "@wishbeam/otel": "workspace:*",
     "@wishbeam/pubsub": "workspace:*",
     "@wishbeam/utils": "workspace:*",
     "base-x": "5.0.1",
