--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -10,30 +10,56 @@
     "jsdoc",
     "node",
     "promise",
-    "vitest",
+    "jest",
     "react",
-    "react-perf",
     "jsx-a11y"
   ],
   "env": {
     "browser": true
   },
   "categories": {
-    "correctness": "error"
+    "correctness": "error",
+    "suspicious": "error",
+    "pedantic": "error",
+    "perf": "error"
   },
   "rules": {
     "eqeqeq": "error",
     "curly": ["error", "multi-line"],
-    "preserve-caught-error": "error",
+    "func-style": ["error", "declaration", { "allowArrowFunctions": true }],
+    "max-lines-per-function": "off",
+    "only-throw-error": "off",
+    "no-var": "error",
+    "no-process-env": "error",
+    "max-lines": "off",
 
-    "typescript/no-unnecessary-boolean-literal-compare": "error",
+    "oxc/no-map-spread": "off",
+
     "typescript/consistent-type-imports": "error",
-    "typescript/no-misused-promises": "error",
+    "typescript/no-import-type-side-effects": "error",
+    "typescript/no-unsafe-type-assertion": "off",
+    "typescript/no-confusing-void-expression": "off",
+    "typescript/promise-function-async": "error",
+    "typescript/strict-boolean-expressions": [
+      "error",
+      { "allowNullableBoolean": true, "allowNullableString": true }
+    ],
+    "typescript/return-await": ["error", "always"],
 
-    "unicorn/no-array-reverse": "error",
-    "unicorn/no-array-sort": "error",
+    "import/consistent-type-specifier-style": "error",
+    "import/no-default-export": "error",
+    "import/max-dependencies": "off",
+    "import/no-named-as-default-member": "off",
+    "import/no-named-as-default": "off",
 
-    "import/no-default-export": "error"
+    "react/only-export-components": "off",
+    "react/jsx-boolean-value": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": "off",
+    "react/no-unknown-property": "off",
+    "react/jsx-props-no-spreading": "off",
+
+    "promise/always-return": ["error", { "ignoreLastCallback": true }]
   },
   "overrides": [
     {
