--- a/package.json
+++ b/package.json
@@ -73,8 +73,5 @@
     "oxlint": "^1.36.0",
     "oxlint-tsgolint": "^0.10.1"
   },
-  "packageManager": "bun@1.3.3",
-  "patchedDependencies": {
-    "nitropack@2.12.6": "patches/nitropack@2.12.6.patch"
-  }
+  "packageManager": "bun@1.3.3"
 }
