Update dialog buttons

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -32,6 +32,16 @@
     "no-var": "error",
     "no-process-env": "error",
     "max-lines": "off",
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": [
+          {
+            "group": ["@base-ui/react/*"]
+          }
+        ]
+      }
+    ],
 
     "oxc/no-map-spread": "off",
 
