--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -21,7 +21,6 @@
   "menuColor": "default",
   "menuAccent": "subtle",
   "registries": {
-    "@coss": "https://coss.com/ui/r/{name}.json",
-    "@tailark": "https://tailark.com/r/{name}.json"
+    "@coss": "https://coss.com/ui/r/{name}.json"
   }
 }
